<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">本地生活</string>
    <string name="app_version">1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_index_search_txt">查找</string>
    <string name="main_index_tuan_txt">团购</string>
    <string name="main_index_checkin_txt">优惠券</string>
    <string name="main_index_my_txt">个人</string>
    <string name="main_index_more_txt">更多</string>
    <string name="main_index_topic_txt">活动</string>
    <string name="no_data">没有找到符合条件的数据</string>
    
    <string name="order_tab_dingdan_text">订单</string>
    <string name="order_tab_youhuiquan_text">优惠券</string>
    <string name="order_tab_huiyuanka_text">会员卡</string>
    
    <string name="order_tab_dingdan_shiyong_text">未支付</string>
    <string name="order_tab_dingdan_weishiyong_text">已支付</string>
    <string name="order_tab_dingdan_yiguoqi_text">已消费</string>
    
    <string name="more_about_context_text">ShopNC本地生活系统是网城创想公司自主研发的一款产品，采用O2O模式(Online To Offline)，将线下商铺和互联网结合，让互联网成为线下交易的前台，专注于本地生活服务，集生活和购物为一体的专业网站，体现本地生活特色，满足消费者多样性的需求，也为商户提供了很好的展示和销售渠道。商户在线上揽客增加客流，消费者在线下消费，享受更多的优惠，商户可以通过参加团购来提高利润和知名度，还可以设立优惠劵和会员卡，吸引更多客户，用户可以对商家进行点评，参加团购，并且用优惠劵购物，享受折扣，站点提供更丰富的商户内容、商品信息，把原本分散的内容整合到一个平台上。</string>
    <string name="more_about_web_address_text">www.shopnc.net</string>
    
    <string name="my_01">订单</string>
    <string name="my_02">优惠券</string>
     <string name="my_03">会员卡</string>
   <!-- <string name="my_04">门票</string>
    <string name="my_05">草稿</string>
    <string name="my_06">商户收藏</string>
    <string name="my_07">团购收藏</string> -->
    
    <string name="more_01">新手帮助</string>
    <string name="more_02">关于我们</string>
    <string name="more_03">客服电话            400-611-5098</string>
    <string name="more_04">400-611-5098</string>
   <!--  <string name="more_02">浏览历史</string>
    <string name="more_03">随手拍帮助附近用户</string>
    <string name="more_04">版本更新</string>
    <string name="more_05">意见反馈</string>
    <string name="more_06">告诉朋友</string>
    <string name="more_07">推荐给微信好友</string> -->
</resources>